--- a/.github/workflows/s4e_riscv_cdsl.yml
+++ b/.github/workflows/s4e_riscv_cdsl.yml
@@ -9,29 +9,36 @@ on:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        repo: ['bkebianyor/seal5', 'bkebianyor/etiss_wysiwyng']
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check Modified Files
-      run: |
-        var=$( git diff --name-only HEAD~ HEAD 2>&1) #./get_list_modified_files
-        echo $var
+    - uses: actions/checkout@v4
+      name: Check Modified Files      
+    - run: |
+          ls -al
+          pwd
+          git fetch origin main:main
+          var=$(git diff --name-only --diff-filter=d main~ main) 
+          echo "List of changed files: "$var
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: riscv-core-dsl-files
-        path: ${{ github.workspace }}/*.core_desc   
+        path: /home/runner/work/riscv-coredsl-extensions/riscv-coredsl-extensions/*.core_desc  
         
-    - name: Trigger Seal5 and ETISS Workflow
+    - name: Trigger Seal5 Workflow
       uses: peter-evans/repository-dispatch@v3
       with:
         token: ${{ secrets.REPO_ACCESS_TOKEN }}
-        repositry: ${{ matrix.repo }}
+        repository: ${{ 'bkebianyor/seal5'}}
         event-type: s4e-cdl-event
-        client-payload: '{ "trigger_repo_run_id": "${{ github.run_id }}" }'
-
-
+        client-payload: '{"triggered_by": "${{ github.repository }}", "run_id": "${{ github.run_id }}"}'
+    
+    - name: Trigger ETISS Workflow
+      uses: peter-evans/repository-dispatch@v3
+      with:
+        token: ${{ secrets.REPO_ACCESS_TOKEN }}
+        repository: ${{ 'bkebianyor/etiss_wysiwyng' }}
+        event-type: s4e-cdl-event
+        client-payload: '{"triggered_by": "${{ github.repository }}", "run_id": "${{ github.run_id }}"}'
         
