--- a/.github/workflows/s4e_riscv_cdsl.yml
+++ b/.github/workflows/s4e_riscv_cdsl.yml
@@ -25,14 +25,14 @@ jobs:
       with:
         name: riscv-core-dsl-files
         path: /home/runner/work/riscv-coredsl-extensions/riscv-coredsl-extensions/*.core_desc      
-        
-    #- name: Trigger Seal5 Workflow
-     # uses: peter-evans/repository-dispatch@v3
-      #with:
-       # token: ${{ secrets.REPO_ACCESS_TOKEN }}
-        #repository: ${{ 'kebi-be/seal5'}}
-       # event-type: s4e-cdl-event
-       # client-payload: '{"triggered_by": "${{ github.repository }}", "run_id": "${{ github.run_id }}"}'
+           
+    - name: Trigger Seal5 Workflow
+      uses: peter-evans/repository-dispatch@v3
+      with:
+       token: ${{ secrets.REPO_ACCESS_TOKEN }}
+       repository: ${{ 'kebi-be/seal5'}}
+       event-type: s4e-cdl-event
+       client-payload: '{"triggered_by": "${{ github.repository }}", "run_id": "${{ github.run_id }}"}'
     
     - name: Trigger ETISS Workflow
       uses: peter-evans/repository-dispatch@v3
